@@ -16,6 +16,12 @@ tree (maybe).
 
 Version 1.3.13 (In progress)
 ============================
+06/05/2002: ljohnson
+            [Ruby] Added a warning message for the Ruby module about the lack
+            of support for multiple inheritance. Only the first base class
+            listed is used and the others are ignored. (Reported by Craig
+            Files).
+            
 06/03/2002: beazley
             Fixed a bug with struct declarations and typedef. For example:
 
